Revision history for {{$dist->name}}

{{$NEXT}}

1.29      2020-06-06 08:40:10 -0600
  - For window (from FFI::Platypus::Buffer), if $size is omitted then
    it will assumed to be a C string and computed using strlen (gh#270)

1.28      2020-05-20 01:43:09 -0600
  - Production release identical to 1.27_01

1.27_01   2020-05-17 18:01:37 -0600
  - Add strcpy to FFI::Platypus::Memory (gh#265)
  - Add window to FFI::Platypus::Buffer (gh#266, gh#267)

1.26      2020-05-07 04:59:17 -0600
  - The return type for the function method can now be omitted and
    defaults to 'void' (gh#262, gh#263)
  - The attach_cast method can now take a wrapper function (gh#261, gh#264)

1.25      2020-05-05 19:40:02 -0600
  - Fixed bug where return type uint64* was being returned as
    sint64* (gh#258, gh#259)

1.24      2020-05-02 16:59:34 -0600
  - Add kindof method (gh#243, gh#254)
  - Add countof method (gh#243, gh#254)
  - Add unitof method (gh#245, gh#254)
  - Add def method (gh#244, gh#248, gh#254)
  - Add hook load_custom_types to the language plugins that allows
    them to define custom types (gh#253)

1.23_01   2020-05-01 11:13:59 -0600
  - Custom record arguments are kept around for the lifetime of the
    function call, meaning they don't have to be explicitly kept by
    the custom code wrapper as long as they aren't used after the
    function returns (gh#236, gh#247).
  - This completes support for custom record types.  This is a
    release candidate.

1.22_01   2020-05-01 08:16:25 -0600
  - Fix test on MSWin32 + older libffi where returning record values
    doesn't work (introduced in 1.20_01, gh#250)

1.21_01   2020-04-29 19:10:59 -0600
  - Diagnostic release.

1.20_01   2020-04-29 06:45:11 -0600
  - Return record custom record value (gh#214, gh#215, gh#235, gh#238, gh#245)

1.19_01   2020-04-27 12:38:43 -0600
  - Diagnostic release.

1.18_01   2020-04-19 10:17:52 -0600
  - Return pointer to custom record (gh#214, gh#215, gh#235, gh#238)
