@@ -48,6 +48,26 @@ diag_preamble = |     sleep 180;
 diag_preamble = |     diag "";
 diag_preamble = |     diag "";
 diag_preamble = |   }
+diag_preamble = |   if($] < 5.008004)
+diag_preamble = |   {
+diag_preamble = |     diag " !! WARNING WARNING WARNINGS WARNING !!";
+diag_preamble = |     diag "";
+diag_preamble = |     diag "The version of Perl you are using (5.10.0) when compiled";
+diag_preamble = |     diag "with threads is buggy and not supported by the Platypus team.";
+diag_preamble = |     diag "Please take the time to upgraded to a supported version of";
+diag_preamble = |     diag "Perl.  Easiest upgrade is probably to 5.10.0 unthreaded, or";
+diag_preamble = |     diag "5.10.1.  Better would be to upgrade to 5.32.";
+diag_preamble = |     diag "";
+diag_preamble = |     diag "https://github.com/Perl5-FFI/FFI-Platypus/issues/271";
+diag_preamble = |     diag "";
+diag_preamble = |     diag " !! WARNING WARNING WARNINGS WARNING !!";
+diag_preamble = |     diag "";
+diag_preamble = |     diag "";
+diag_preamble = |     diag "sleep 180";
+diag_preamble = |     sleep 180;
+diag_preamble = |     diag "";
+diag_preamble = |     diag "";
+diag_preamble = |   }
 diag_preamble = |   eval {
 diag_preamble = |     require lib;
 diag_preamble = |     lib->import('inc');
